--- a/XivVoicesWIP.csproj
+++ b/XivVoicesWIP.csproj
@@ -7,6 +7,11 @@
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="src/nosound.scd"/>
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
   </ItemGroup>
