--- a/XivVoicesWIP.csproj
+++ b/XivVoicesWIP.csproj
@@ -6,6 +6,7 @@
     <PackageProjectUrl>https://github.com/Final-Fantasy-XIV-Voices/XivVoices-WIP</PackageProjectUrl>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
   </PropertyGroup>
 
   <ItemGroup>
