--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,99 +1,89 @@
 on:
   workflow_dispatch:
-    inputs: {}
   push:
     tags:
       - "*"
 
 name: Release
 
+# TODO: port commented code to bash
+
 jobs:
   release:
     name: Release
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-
+      - uses: actions/checkout@v4
       - name: Setup .NET
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: "9.0.x"
-
+          dotnet-version: 9.0.x
       - name: Download Dalamud
         run: |
-          Invoke-WebRequest -Uri https://goatcorp.github.io/dalamud-distrib/stg/latest.zip -OutFile latest.zip
-          Expand-Archive -Force latest.zip "$env:AppData\XIVLauncher\addon\Hooks\dev\"
-
+          curl -o latest.zip https://goatcorp.github.io/dalamud-distrib/latest.zip
+          mkdir -p ~/.xlcore/dalamud/Hooks/dev/
+          unzip latest.zip -d ~/.xlcore/dalamud/Hooks/dev/
       - name: Restore dependencies
         run: dotnet restore
-
-      - name: Set version based on ref type
-        id: set_version
-        run: |
-          if("${{ github.ref }}" -match "refs/tags/") {
-            $ver = "${{ github.ref }}" -replace 'refs/tags/',''
-          } else {
-            # Fallback version, or generate one based on date, commit SHA, etc.
-            $ver = "0.0.1" # Example fallback version
-          }
-          echo "::set-output name=version::$ver"
-        shell: pwsh
-
-      - name: Build
-        run: |
-          $ver = "${{ steps.set_version.outputs.version }}"
-          dotnet build --no-restore -c Release --nologo -p:Version=$ver
-        shell: pwsh
-
-      - name: Write version into manifest
-        run: |
-          $ver = '${{ github.ref }}' -replace 'refs/tags/',''
-          $path = './XivVoices/bin/Release/XivVoices.json'
-          $content = get-content -path $path
-          $content = $content -replace '0.0.0.0',$ver
-          set-content -Path $path -Value $content
-
-      - name: Packing Release
-        run: |
-          pushd XivVoices/bin/Release
-          7z a ./XivVoices.zip *
-          popd
-        shell: bash
-
-      - name: Create Release
-        uses: ncipollo/release-action@v1.12.0
-        with:
-          name: XivVoices ${{ github.ref_name }}
-          artifacts: "./XivVoices/bin/Release/*.zip"
-          tag: ${{ github.ref_name }}
-          body: "Xiv Voices Plugin Release. Install via the dalamud repo link."
-          omitBodyDuringUpdate: true
-          allowUpdates: true
-          replacesArtifacts: true
-          token: ${{ secrets.RELEASE }}
-
-      - name: Write out repo.json
-        run: |
-          $ver = '${{ github.ref_name }}'
-          $path = './repo.json'
-          $json = Get-Content -Raw $path | ConvertFrom-Json
-          $json[0].AssemblyVersion = $ver
-          $json[0].TestingAssemblyVersion = $ver
-          $json[0].DownloadLinkInstall = $json.DownloadLinkInstall -replace '[^/]+/XivVoices.zip',"$ver/XivVoices.zip"
-          $json[0].DownloadLinkTesting = $json.DownloadLinkTesting -replace '[^/]+/XivVoices.zip',"$ver/XivVoices.zip"
-          $json[0].DownloadLinkUpdate = $json.DownloadLinkUpdate -replace '[^/]+/XivVoices.zip',"$ver/XivVoices.zip"
-          $content = $json | ConvertTo-Json -AsArray
-          set-content -Path $path -Value $content
-
-      - name: Commit repo.json
-        run: |
-          git config --global user.name "Actions User"
-          git config --global user.email "actions@github.com"
-          git fetch origin main
-          git branch -f main ${{ github.sha }}
-          git checkout main
-          git add repo.json
-          git commit -m "[CI] Updating repo.json for ${{ github.ref_name }}" || true
-          git push origin main
+      # - name: Set version based on ref type
+      #   id: set_version
+      #   run: |
+      #     if("${{ github.ref }}" -match "refs/tags/") {
+      #       $ver = "${{ github.ref }}" -replace 'refs/tags/',''
+      #     } else {
+      #       # Fallback version, or generate one based on date, commit SHA, etc.
+      #       $ver = "0.0.1" # Example fallback version
+      #     }
+      #     echo "::set-output name=version::$ver"
+      #   shell: pwsh
+      # - name: Build
+      #   run: |
+      #     $ver = "${{ steps.set_version.outputs.version }}"
+      #     dotnet build --no-restore -c Release --nologo -p:Version=$ver
+      #   shell: pwsh
+      # - name: Write version into manifest
+      #   run: |
+      #     $ver = '${{ github.ref }}' -replace 'refs/tags/',''
+      #     $path = './XivVoices/bin/Release/XivVoices.json'
+      #     $content = get-content -path $path
+      #     $content = $content -replace '0.0.0.0',$ver
+      #     set-content -Path $path -Value $content
+      # - name: Packing Release
+      #   run: |
+      #     pushd XivVoices/bin/Release
+      #     7z a ./XivVoices.zip *
+      #     popd
+      #   shell: bash
+      # - name: Create Release
+      #   uses: ncipollo/release-action@v1.12.0
+      #   with:
+      #     name: XivVoices ${{ github.ref_name }}
+      #     artifacts: "./XivVoices/bin/Release/*.zip"
+      #     tag: ${{ github.ref_name }}
+      #     body: "Xiv Voices Plugin Release. Install via the dalamud repo link."
+      #     omitBodyDuringUpdate: true
+      #     allowUpdates: true
+      #     replacesArtifacts: true
+      #     token: ${{ secrets.RELEASE }}
+      # - name: Write out repo.json
+      #   run: |
+      #     $ver = '${{ github.ref_name }}'
+      #     $path = './repo.json'
+      #     $json = Get-Content -Raw $path | ConvertFrom-Json
+      #     $json[0].AssemblyVersion = $ver
+      #     $json[0].TestingAssemblyVersion = $ver
+      #     $json[0].DownloadLinkInstall = $json.DownloadLinkInstall -replace '[^/]+/XivVoices.zip',"$ver/XivVoices.zip"
+      #     $json[0].DownloadLinkTesting = $json.DownloadLinkTesting -replace '[^/]+/XivVoices.zip',"$ver/XivVoices.zip"
+      #     $json[0].DownloadLinkUpdate = $json.DownloadLinkUpdate -replace '[^/]+/XivVoices.zip',"$ver/XivVoices.zip"
+      #     $content = $json | ConvertTo-Json -AsArray
+      #     set-content -Path $path -Value $content
+      # - name: Commit repo.json
+      #   run: |
+      #     git config --global user.name "Actions User"
+      #     git config --global user.email "actions@github.com"
+      #     git fetch origin main
+      #     git branch -f main ${{ github.sha }}
+      #     git checkout main
+      #     git add repo.json
+      #     git commit -m "[CI] Updating repo.json for ${{ github.ref_name }}" || true
+      #     git push origin main
